# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: flake8.yml  tests.yaml
page_loader/: K.py  __init__.py  cli.py  cli_parser.py  downloaders.py  error_handler.py  errors.py  formatters.py  logger.py  page_loader.py  parsers.py  paths.py  processors.py  progress.py  savers.py  tag_processors.py
page_loader/downloaders/: __init__.py  downloaders.py
page_loader/formatters/: __init__.py
page_loader/parsers/: cli_parser.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_errors.py  test_formatters.py  test_page_loader.py
tests/fixtures/: rel_path_script.js  test_html_after.html  test_html_before.html  test_html_without_resources.html
